# remoteid

./: partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  size_output.txt
app/: app_main.c  app_main.h  console.c  console.h
app/button/: button_event.c  button_event.h
app/config/: board_config.c  board_config.h
app/config/board_config/: bec_led_strip_esp32c3.h  devkit_esp32c2.h  devkit_esp32c3.h  fixedwing_new.h  fixedwing_old.h
app/drivers/data_port/: sb_data_port.c  sb_data_port.h
app/drivers/data_port/uart/: uart_port.c  uart_port.h
components/DroneCAN_generated/: CMakeLists.txt  dronecan.remoteid.ArmStatus.c  dronecan.remoteid.ArmStatus.h  dronecan.remoteid.BasicID.c  dronecan.remoteid.BasicID.h  dronecan.remoteid.Location.c  dronecan.remoteid.Location.h  dronecan.remoteid.OperatorID.c  dronecan.remoteid.OperatorID.h  dronecan.remoteid.SecureCommand.h  dronecan.remoteid.SecureCommand_req.c  dronecan.remoteid.SecureCommand_req.h  dronecan.remoteid.SecureCommand_res.c  dronecan.remoteid.SecureCommand_res.h  dronecan.remoteid.SelfID.c  dronecan.remoteid.SelfID.h  dronecan.remoteid.System.c  dronecan.remoteid.System.h  uavcan.protocol.GetNodeInfo.h  uavcan.protocol.GetNodeInfo_req.c  uavcan.protocol.GetNodeInfo_req.h  uavcan.protocol.GetNodeInfo_res.c  uavcan.protocol.GetNodeInfo_res.h  uavcan.protocol.HardwareVersion.c  uavcan.protocol.HardwareVersion.h  uavcan.protocol.NodeStatus.c  uavcan.protocol.NodeStatus.h  uavcan.protocol.RestartNode.h  uavcan.protocol.RestartNode_req.c  uavcan.protocol.RestartNode_req.h  uavcan.protocol.RestartNode_res.c  uavcan.protocol.RestartNode_res.h  uavcan.protocol.SoftwareVersion.c  uavcan.protocol.SoftwareVersion.h  uavcan.protocol.debug.LogLevel.c  uavcan.protocol.debug.LogLevel.h  uavcan.protocol.debug.LogMessage.c  uavcan.protocol.debug.LogMessage.h  uavcan.protocol.dynamic_node_id.Allocation.c  uavcan.protocol.dynamic_node_id.Allocation.h  (+30 more)
components/DroneCAN_generated/include/: com.hobbywing.esc.GetEscID.h  com.hobbywing.esc.GetMaintenanceInformation_req.h  com.hobbywing.esc.GetMaintenanceInformation_res.h  com.hobbywing.esc.GetMajorConfig_req.h  com.hobbywing.esc.GetMajorConfig_res.h  com.hobbywing.esc.RawCommand.h  com.hobbywing.esc.SelfTest_req.h  com.hobbywing.esc.SelfTest_res.h  com.hobbywing.esc.SetAngle_req.h  com.hobbywing.esc.SetAngle_res.h  com.hobbywing.esc.SetBaud_req.h  com.hobbywing.esc.SetBaud_res.h  com.hobbywing.esc.SetDirection_req.h  com.hobbywing.esc.SetDirection_res.h  com.hobbywing.esc.SetID_req.h  com.hobbywing.esc.SetID_res.h  com.hobbywing.esc.SetLED_req.h  com.hobbywing.esc.SetLED_res.h  com.hobbywing.esc.SetReportingFrequency_req.h  com.hobbywing.esc.SetReportingFrequency_res.h  com.hobbywing.esc.SetThrottleSource_req.h  com.hobbywing.esc.SetThrottleSource_res.h  com.hobbywing.esc.StatusMsg1.h  com.hobbywing.esc.StatusMsg2.h  com.hobbywing.esc.StatusMsg3.h  dronecan.sensors.rc.RCInput.h  dronecan_msgs.h
components/DroneCAN_generated/src/: com.hobbywing.esc.GetEscID.c  com.hobbywing.esc.GetMaintenanceInformation_req.c  com.hobbywing.esc.GetMaintenanceInformation_res.c  com.hobbywing.esc.GetMajorConfig_req.c  com.hobbywing.esc.GetMajorConfig_res.c  com.hobbywing.esc.RawCommand.c  com.hobbywing.esc.SelfTest_req.c  com.hobbywing.esc.SelfTest_res.c  com.hobbywing.esc.SetAngle_req.c  com.hobbywing.esc.SetAngle_res.c  com.hobbywing.esc.SetBaud_req.c  com.hobbywing.esc.SetBaud_res.c  com.hobbywing.esc.SetDirection_req.c  com.hobbywing.esc.SetDirection_res.c  com.hobbywing.esc.SetID_req.c  com.hobbywing.esc.SetID_res.c  com.hobbywing.esc.SetLED_req.c  com.hobbywing.esc.SetLED_res.c  com.hobbywing.esc.SetReportingFrequency_req.c  com.hobbywing.esc.SetReportingFrequency_res.c  com.hobbywing.esc.SetThrottleSource_req.c  com.hobbywing.esc.SetThrottleSource_res.c  com.hobbywing.esc.StatusMsg1.c  com.hobbywing.esc.StatusMsg2.c  com.hobbywing.esc.StatusMsg3.c  dronecan.sensors.rc.RCInput.c
components/libcanard/: CMakeLists.txt
components/libopendroneid/: CMakeLists.txt  opendroneid.c  wifi.c
components/mavlink2/: CMakeLists.txt
components/opendriver/: BLE_TX.cpp  CANDriver.cpp  CANDriver.h  CMakeLists.txt  DroneCAN.h  Relationship.txt  WiFi_TX.cpp  board_config.h  git-version.h  led.cpp  led.h  mavlink.cpp  opendriver.cpp  opendriver.h  parameters.cpp  parameters.h  readme.md  romfs.cpp  romfs_files.h  status.cpp  version.h  webinterface.cpp
components/system/: CMakeLists.txt
components/system/include/: sys_init.h  sys_log.h  sys_types.h
components/system/include/drivers/chip/: _hal.h  adc.h  clk.h  cmp.h  dac.h  dma.h  fmc.h  gpio.h  i2c.h  irq.h  lpm.h  misc.h  phy.h  spi.h  tick.h  tim.h  uart.h  wdt.h
components/system/include/list/: dlist.h  flist.h  pslist.h  slist.h
components/system/include/os/: os.h  os_common.h  os_heap.h  os_ipc.h  os_mutex.h  os_semaphore.h  os_service.h  os_thread.h  os_timer.h  os_work.h
components/system/include/sys/: features.h  reent.h
components/system/source/k_kit/: README.md  k_kit.c  k_kit.h  kk.h
components/system/source/shell/: README.md  sh.c  sh.h  sh_vset.c  sh_vset.h  sh_vt100.c  sh_vt100.h
components/system/test/: main.c  main.h  os_test.c  os_test.h  os_test_ipc_fifo.c  os_test_ipc_pipe.c  os_test_ipc_queue.c  os_test_sem.c  os_test_thread_sleep.c  os_test_thread_yield.c
main/: BLE_TX.cpp  CANDriver.cpp  CMakeLists.txt  DroneCAN.cpp  DroneCAN.h  WiFi_TX.cpp  check_firmware.cpp  git-version.h  hello_world_main.cpp  main.c  mavlink.cpp  mavlink.h  options.h  ota.c  ota.h  transmitter.cpp  transport.cpp  version.h
sal/esp32s3/: soc_shell.c  soc_shell_base.c  soc_shell_nvs.c
sal/esp32s3/chip/: uart_esp32.c
sal/esp32s3/kernel/: os_debug.h  os_heap.c  os_hook.c  os_kit.c  os_mutex.c  os_semaphore.c  os_service.c  os_thread.c  os_timer.c  os_util.h
